next-gen-routes/multi-vip/ocp-route/cafe/route-coffee.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    f5tnr: "true"
  name: cafe-coffee
  namespace: cafe
spec:
  host: cafe.example.com
  path: "/coffee"
  port:
    targetPort: 8080
  tls:
   certificate: |
      -----BEGIN CERTIFICATE-----
      LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUMwekNDQWJ1Z0F3SUJBZ0lKQU01Q2tsT0FoVzdXTUEwR0NTcUdTSWIzRFFFQkN3VUFNQUF3SGhjTk1Ua3gKTURJME1EVXhOVEExV2hjTk1Ua3hNREkxTURVeE5UQTFXakFBTUlJQklqQU5CZ2txaGtpRzl3MEJBUUVGQUFPQwpBUThBTUlJQkNnS0NBUUVBelRZZnk2cC9Yc3E1WlNTeTVaVlJUZWV6aTNyWFRxcnlDY2JPQS9vbWFBeERrMWx2ClduYWRjNTd6REJDSWc0amk3bWtsZm11ajRsKzdDSmhrL1JmV2JBdDllNGlDNVFGWVltbGF6R2dpSjlPakd5L0cKRVNXTkRlaEsvMGdOb1ZhUFE2aEJMTUczdTlqQS9BTmdiZ0c5Qlh4S211ZzlkS3lUcENKNUNxYi9qNHFNcWxxbgpvNk8ybllkczFyNUp3T0NoSj [...]
      -----END CERTIFICATE-----
    key: |
      -----BEGIN RSA PRIVATE KEY-----
      LS0tLS1CRUdJTiBQUklWQVRFIEtFWS0tLS0tCk1JSUV2d0lCQURBTkJna3Foa2lHOXcwQkFRRUZBQVNDQktrd2dnU2xBZ0VBQW9JQkFRRE5OaC9McW45ZXlybGwKSkxMbGxWRk41N09MZXRkT3F2SUp4czREK2lab0RFT1RXVzlhZHAxem52TU1FSWlEaU9MdWFTVithNlBpWDdzSQptR1Q5Rjlac0MzMTdpSUxsQVZoaWFWck1hQ0luMDZNYkw4WVJKWTBONkVyL1NBMmhWbzlEcUVFc3diZTcyTUQ4CkEyQnVBYjBGZkVxYTZEMTBySk9rSW5rS3B2K1Bpb3lxV3Flam83YWRoMnpXdmtuQTRLRW4xY3hkWElvWkdLNTMKYW9JdVJ4SGYrL2ZnRExLSldaRGZOQ2dHcHc1ODlKSHEvbnpMWFFQU2VEYmMyT1gxUEFiaGlZMWlQb2Q0K0ZFZApkakdhdytjN1lqSHdieDNDVE [...]
      -----END RSA PRIVATE KEY-----
    termination: edge
  to:
    kind: Service
    name: coffee-svc
