next-gen-routes/multi-vip/ocp-route/cafe/route-tea.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    f5tnr: "true"
  name: cafe-tea
  namespace: default
spec:
  host: cafe.example.com
  path: "/tea"
  port:
    targetPort: 8080
  tls:
    clientSSL: /Common/clientssl
    reference: bigip
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: tea-svc
